# forma

./: .gitignore  .gitmodules  CMakeLists.txt  code-city.html  coverage.catch_assertion_handler.hpp.212017deb194ab1193d2a0c7e4b3da7d.html  coverage.catch_decomposer.hpp.fc20c0689854ea35dcfc3b764cb77ac5.html  coverage.catch_matchers.hpp.e8e51e9446e88699a8ff035be65c8f40.html  coverage.catch_matchers_impl.hpp.dce63fc6b91dfc35c860a5c50aedfd91.html  coverage.catch_matchers_vector.hpp.8ca652280b5a78e7ea4ee815d462cf7c.html  coverage.catch_reusable_string_stream.hpp.fa96ff7194fb8acadb04deab770393f4.html  coverage.catch_source_line_info.hpp.9e391b9ca7828266cd67af79ded30ca0.html  coverage.catch_stringref.hpp.fceb91faa6c9c6b393d288f2d9427f9f.html  coverage.catch_test_registry.hpp.ff15e92edfb097a7a800246c26d36eb0.html  coverage.catch_tostring.hpp.a5d48d04a8103f1a22ad9178382ccdc3.html  coverage.catch_unique_ptr.hpp.696e3151c39d8cc27e1e2d0c4f1d01b8.html  coverage.core.cc.30ad62fe003045363b689c2849f9d422.html  coverage.core.hh.b631d6a69de75bea748316843046e755.html  coverage.functions.html  coverage.html  coverage.parser.cc.3b9df0764ef39b220bd15393ba77c1b9.html  coverage.parser.hh.40b38956e924ff18cc4a553adff1dbb3.html  coverage.scanner.cc.456afe86020d0b54c1430e387bb354c4.html  coverage.scanner.hh.c045d182c7ecac8a8ba59e54fccb1f7c.html  coverage.template.cc.b7aa4da3051b81fb992a775348dd1b0f.html  coverage.template.hh.2dacd6012d470d555b9163560d812ba8.html  coverage.template.test.cc.5d4d9400a8db1ecf10f3d414334de8d4.html  readme.md
docs/: doxygen.ini
doxygen-html/: annotated.html  classes.html  classforma_1_1Definition-members.html  classforma_1_1Definition.html  core_8hh.html  core_8hh_source.html  dir_5f2809d7dbe77ba4294d85513e2f929d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  menudata.js  namespaceforma.html  namespaceforma_1_1node.html  namespaceforma_1_1strings.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  parser_8hh.html  parser_8hh_source.html  readme_8md.html  scanner_8hh.html  scanner_8hh_source.html  structforma_1_1DirectoryInfo-members.html  structforma_1_1DirectoryInfo.html  structforma_1_1Error-members.html  structforma_1_1Error.html  structforma_1_1Fmt-members.html  structforma_1_1Fmt.html  structforma_1_1FuncArgument-members.html  structforma_1_1FuncArgument.html  structforma_1_1Location-members.html  (+23 more)
tidy/: index.html
xml/: Doxyfile.xml  classforma_1_1Definition.xml  core_8hh.xml  dir_5f2809d7dbe77ba4294d85513e2f929d.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  indexpage.xml  namespaceforma.xml  namespaceforma_1_1node.xml  namespaceforma_1_1strings.xml  parser_8hh.xml  scanner_8hh.xml  structforma_1_1DirectoryInfo.xml  structforma_1_1Error.xml  structforma_1_1Fmt.xml  structforma_1_1FuncArgument.xml  structforma_1_1Location.xml  structforma_1_1Node.xml  structforma_1_1ScannerLocation.xml  structforma_1_1Token.xml  structforma_1_1VfsRead.xml  structforma_1_1node_1_1Attribute.xml  structforma_1_1node_1_1FunctionCall.xml  (+5 more)
(+16 files in other folders)
